--- a/db_sample/src/app/pages/skill/skill.page.html
+++ b/db_sample/src/app/pages/skill/skill.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>product</ion-title>
+    <ion-title>skill</ion-title>
   </ion-toolbar>
 </ion-header>
 
