--- a/db_sample/src/app/pages/developer/developer.page.html
+++ b/db_sample/src/app/pages/developer/developer.page.html
@@ -5,32 +5,43 @@
 </ion-header>
 
 <ion-content>
-  <!-- <ion-list lines='full'>
+  <!-- Display list -->
+  <ion-list>
+    <ion-list-header>Developer</ion-list-header>
+    <ion-item lines="inset" *ngFor="let dev of developers">
+      <ion-avatar slot="start">
+        <img [src]="dev.img">
+      </ion-avatar>
+      <ion-label>{{dev.name}}</ion-label>
+      <ion-label>{{dev.skills}}</ion-label>
+      <ion-icon name="trash-outline" color="danger" slot="end" (click)="deleteData(dev.id)"></ion-icon>
+    </ion-item>
+  </ion-list>
+
+  <!-- Form sample -->
+  <!-- <ion-list lines='full'> -->
     <form [formGroup]="mainForm" (ngSubmit)="storeData()">
       <ion-item>
         <ion-label position="floating">Developer Name</ion-label>
         <ion-input formControlName="name" type="text"></ion-input>
       </ion-item>
-      <ion-item>
-        <ion-label>Skills</ion-label>
+      <!-- <ion-item>
+        <ion-label position="floating">Skills</ion-label>
         <ion-input formControlName="skills" type="text"></ion-input>
-      </ion-item>
+      </ion-item> -->
       <ion-item>
-        <ion-label position="floating">img</ion-label>
+        <ion-label position="floating">Image URL</ion-label>
         <ion-input formControlName="img" type="text"></ion-input>
       </ion-item>
+      
+      <ion-row>
+        <ion-col>
+          <ion-button type="submit" color="primary" shape="full" expand="block">Add Developer</ion-button>
+        </ion-col>
+      </ion-row>
     </form>
-  </ion-list> -->
+  <!-- </ion-list> -->
 
-
-  <ion-list>
-    <ion-list-header>Developer</ion-list-header>
-    <ion-item lines="inset" *ngFor="let dev of developers">
-      <ion-label>{{dev.name}}</ion-label>
-      <ion-avatar slot="start">
-        <img [src]="dev.img">
-      </ion-avatar>
-    </ion-item>
-  </ion-list>
+  
 
 </ion-content>
